--- a/Rachel.html
+++ b/Rachel.html
@@ -10,8 +10,9 @@
 
 
 
+<meta name="date" content="2023-02-13" />
 
-<title>index.knit</title>
+<title>Rachel</title>
 
 <script src="site_libs/header-attrs-2.20/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -263,23 +264,19 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">Rachel</h1>
+<h4 class="date">2023-02-13</h4>
 
 </div>
 
 
-<div
-id="a-compilation-of-cute-turtle-pictures-and-information-about-two-humans"
-class="section level1">
-<h1>A Compilation of Cute Turtle Pictures and Information about Two
-Humans</h1>
-<p>Jessie Hughes: <a
-href="https://github.com/TheThinMint/assignment-3-jah667"
-class="uri">https://github.com/TheThinMint/assignment-3-jah667</a></p>
-<p>Rachel Bai: <a
-href="https://github.com/RachelBai0525/assignment-3-zb93"
-class="uri">https://github.com/RachelBai0525/assignment-3-zb93</a></p>
-<p><img
-src="https://cdn.pixabay.com/photo/2016/11/29/08/31/animal-1868436__340.jpg" /></p>
+<div id="rachel" class="section level1">
+<h1>Rachel</h1>
+<ul>
+<li>I’m 22</li>
+<li>Marugame is my go-to food</li>
+<li>I love dancing</li>
+</ul>
 </div>
 
 
