--- a/jessie.html
+++ b/jessie.html
@@ -9,11 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Jessie Hughes" />
 
-<meta name="date" content="2023-02-16" />
 
-<title>jessie</title>
+<title>jessie.knit</title>
 
 <script src="site_libs/header-attrs-2.20/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -341,9 +339,6 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">jessie</h1>
-<h4 class="author">Jessie Hughes</h4>
-<h4 class="date">2023-02-16</h4>
 
 </div>
 
